package com.ParkingLot;

public class Payment {
    public boolean payTicket(int amount){
        System.out.println("paying via default method");
        return true;
    }
}
