package com.ParkingLot;

public enum VehicleType {
    TWO,
    FOUR
}
