package com.ParkingLot;

public class Vehicle {
    public int num;
    public VehicleType vehtype;

    Vehicle(int num, VehicleType vehtype){
        this.num = num;
        this.vehtype = vehtype;
    }
}
